tools/architecture/validate-source-imports/tests/fixtures/invalid/feature-imports-clickhouse/src/index.ts
import { clickhouse } from "@platform/adapters-clickhouse";
export const packageName = "@platform/feature-workflow";
